--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':login', ':listview', ':listview2', ':viewanimation', ':appcompactacitivity', ':activitystate', ':handleruntimechangesv1', ':resources', ':handleruntimechangesv2', ':interchange', ':fragments', ':toast', ':dialog', ':statusbar'
+include ':app', ':login', ':listview', ':listview2', ':viewanimation', ':appcompactacitivity', ':activitystate', ':handleruntimechangesv1', ':resources', ':handleruntimechangesv2', ':interchange', ':fragments', ':toast', ':dialog', ':statusbar', ':playerinfo', ':intent&intentfilters', ':intentandintentfilters'
